--- a/Ansible/k8s_deployment.yaml
+++ b/Ansible/k8s_deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: mc-app
-        image: devopshubg333/k8s:3
+        image: harishalluri99/batch14:0
         ports:
         - containerPort: 8080
 ---
